fix: spacing on reset password button

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -533,6 +533,7 @@ html:focus-within {
 
 .myprofile-container form button {
   margin-top: 2.3rem;
+  margin-left: 3rem;
   height: 3rem;
   font-size: 1rem;
   text-align: center;
